ea/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ups-dev
  labels:
    logging.stellar/elk-datastream: social-ups-dev-logs
    logging.stellar/elk-tenant: social
