ea/base/ups-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ups-api
spec:
  selector:
    matchLabels:
      app: ups-api
  template:
    metadata:
      labels:
        app: ups-api
    spec:
      serviceAccount: ups-api
      containers:
        - name: ups-api
          image: 893895740383.dkr.ecr.us-east-1.amazonaws.com/ups-api
          imagePullPolicy: Always
          args:
            - server 
            - /opt/ups-api/conf/dev.yml
          resources:
            limits:
              memory: 5Gi
              cpu: 1000m
          ports:
            - containerPort: 8020
              name: http-api
