ea/base/virtual-service-public.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ups-api-public
spec:
  gateways:
    - istio-system/api-gateway
    - public
  hosts: 
    - ups-api-dev.k.dev.social.ea.com
  http:
    - name: ups-api
      match:
        - port: 443
      route:
        - destination:
            host: ups-api
            port:
              number: 8020
      retries:
        attempts: 3
        retryOn: connect-failure,unavailable
        retryRemoteLocalities: true
      timeout: 5s
